# minecraftcpp

./: README.md
docs/: bugs-handheld.txt
handheld/project/android/: .classpath  .project  AndroidManifest.xml  ManifestAddons.xml  default.properties  proguard.cfg
handheld/project/android/jni/: Android.mk  Application.mk
handheld/project/android_java/: .classpath  .project  AndroidManifest.xml  ManifestAddons.xml  default.properties  proguard.cfg
handheld/project/android_java/jni/: Android.mk  Application.mk
handheld/project/dedicated_server/: CMakeLists.txt
handheld/project/iosproj/InAppSettings.bundle/: Root.inApp.plist  Root.plist  userDefault.plist
handheld/project/iosproj/minecraftpe/: EAGLView.h  EAGLView.m  PVRTexture.h  PVRTexture.m  ShowKeyboardView.h  ShowKeyboardView.mm  main.mm  minecraftpe-Info.plist  minecraftpe-Prefix.pch  minecraftpeAppDelegate.h  minecraftpeAppDelegate.mm  minecraftpeViewController.h  minecraftpeViewController.mm  minecraftpedemo-info.plist
handheld/project/iosproj/minecraftpe.xcodeproj/: project.pbxproj
handheld/project/raspberry/: Makefile  minecraftpi
handheld/project/raspberry/py/: api.py  apiutil.py  event.py  game_snake.py  image.py  kbhelp.py  vec3.py
handheld/project/win32/: MinecraftWin32.sln  MinecraftWin32.vcxproj  MinecraftWin32.vcxproj.filters
handheld/project/win32_gl/: MinecraftWin32_GL.sln  MinecraftWin32_GL.vcxproj  MinecraftWin32_GL.vcxproj.filters
handheld/src/: App.h  AppConstants.h  AppPlatform.h  AppPlatform_android.h  AppPlatform_android23.h  AppPlatform_iOS.h  AppPlatform_iOS.mm  AppPlatform_win32.cpp  AppPlatform_win32.h  EglConfigPrinter.h  ErrorCodes.h  LicenseCodes.h  NinecraftApp.cpp  NinecraftApp.h  Performance.cpp  Performance.h  SharedConstants.cpp  SharedConstants.h  main.cpp  main_android.cpp  main_android.h  main_android_java.cpp  main_android_java.h  main_dedicated.cpp  main_rpi.cpp  main_rpi.h  main_win32.h
handheld/src/client/: IConfigListener.cpp  IConfigListener.h  KeyMapping.h  Minecraft.cpp  Minecraft.h  MouseHandler.cpp  MouseHandler.h  OptionStrings.cpp  OptionStrings.h  Options.cpp  Options.h  OptionsFile.cpp  OptionsFile.h  PixelCalc.h  Timer.h  User.h
handheld/src/client/gamemode/: CreativeMode.cpp  CreativeMode.h  CreatorMode.cpp  CreatorMode.h  GameMode.cpp  GameMode.h  SurvivalMode.cpp  SurvivalMode.h
handheld/src/client/gui/: Font.cpp  Font.h  Gui.cpp  Gui.h  GuiComponent.cpp  GuiComponent.h  Screen.cpp  Screen.h  TweenData.h
handheld/src/client/model/: ChestModel.h  ChickenModel.cpp  ChickenModel.h  CowModel.cpp  CowModel.h  CreeperModel.h  HumanoidModel.cpp  HumanoidModel.h  Model.h  ModelInclude.h  PigModel.cpp  PigModel.h  QuadrupedModel.cpp  QuadrupedModel.h  SheepFurModel.cpp  SheepFurModel.h  SheepModel.cpp  SheepModel.h  SignModel.h  SkeletonModel.h  SpiderModel.h  ZombieModel.h
handheld/src/client/multiplayer/: MultiPlayerLevel.h
handheld/src/client/particle/: BreakingItemParticle.h  BubbleParticle.h  CritParticle2.h  ExplodeParticle.h  FlameParticle.h  HugeExplosionParticle.h  HugeExplosionSeedParticle.h  LavaParticle.h  Particle.cpp  Particle.h  ParticleEngine.cpp  ParticleEngine.h  ParticleInclude.h  RedDustParticle.h  SmokeParticle.h  SplashParticle.h  TakeAnimationParticle.h  TerrainParticle.h
handheld/src/client/player/: LocalPlayer.cpp  LocalPlayer.h  RemotePlayer.cpp  RemotePlayer.h
handheld/src/client/renderer/: Chunk.cpp  Chunk.h  ChunkRenderer.h  Color4.h  DirtyChunkSorter.h  DistanceChunkSorter.h  EntityTileRenderer.cpp  EntityTileRenderer.h  GameRenderer.cpp  GameRenderer.h  ItemInHandRenderer.cpp  ItemInHandRenderer.h  LevelRenderer.cpp  LevelRenderer.h  RenderChunk.cpp  RenderChunk.h  RenderChunkHandler.h  RenderList.cpp  RenderList.h  Tesselator.cpp  Tesselator.h  TextureData.h  Textures.cpp  Textures.h  TileRenderer.cpp  TileRenderer.h  VertecDecl.h  gles.cpp  gles.h
handheld/src/client/sound/: Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h  SoundEngine.mm  SoundRepository.h
handheld/src/locale/: I18n.cpp  I18n.h
handheld/src/nbt/: ByteArrayTag.h  ByteTag.h  CompoundTag.h  DoubleTag.h  EndTag.h  FloatTag.h  IntTag.h  ListTag.h  LongTag.h  NbtIo.h  ShortTag.h  StringTag.h  Tag.cpp  Tag.h
handheld/src/network/: ClientSideNetworkHandler.cpp  ClientSideNetworkHandler.h  NATPunchHandler.cpp  NATPunchHandler.h  NetEventCallback.cpp  NetEventCallback.h  PHPDirectoryServer2.cpp  PHPDirectoryServer2.h  Packet.cpp  Packet.h  RakNetInstance.cpp  RakNetInstance.h  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.h
handheld/src/network/command/: CommandServer.cpp  CommandServer.h
handheld/src/network/packet/: AddEntityPacket.h  AddItemEntityPacket.h  AddMobPacket.h  AddPaintingPacket.h  AddPlayerPacket.h  AdventureSettingsPacket.h  AnimatePacket.h  ChatPacket.h  ChunkDataPacket.h  ContainerAckPacket.h  ContainerClosePacket.h  ContainerOpenPacket.h  ContainerSetContentPacket.h  ContainerSetDataPacket.h  ContainerSetSlotPacket.h  DropItemPacket.h  EntityEventPacket.h  ExplodePacket.h  HurtArmorPacket.h  InteractPacket.h  LevelEventPacket.h  LoginPacket.h  LoginStatusPacket.h  MessagePacket.h  MoveEntityPacket.h  MovePlayerPacket.h  PacketInclude.h  PlaceBlockPacket.h  PlayerActionPacket.h  PlayerArmorEquipmentPacket.h  ReadyPacket.h  (+20 more)
handheld/src/platform/: CThread.cpp  CThread.h  file.h  log.h  time.cpp  time.h
handheld/src/raknet/: RakPeerInterface.h  SHA1.h  rdlmalloc.h
handheld/src/server/: ArgumentsSettings.cpp  ArgumentsSettings.h  CreatorLevel.cpp  CreatorLevel.h  ServerLevel.cpp  ServerLevel.h  ServerPlayer.cpp  ServerPlayer.h
handheld/src/util/: CollectionUtils.h  DataIO.cpp  DataIO.h  IntHashMap.h  MemUtils.h  Mth.cpp  Mth.h  PerfRenderer.cpp  PerfRenderer.h  PerfTimer.cpp  PerfTimer.h  RakDataIO.h  Random.h  SmoothFloat.h  StringUtils.cpp  StringUtils.h  WeighedRandom.h
handheld/src/world/: Container.h  Difficulty.h  Direction.cpp  Direction.h  Facing.h  Pos.h  PosTranslator.h
tools/: ImgToCArray.py  ImgToTex.py  JConvert.py  WavToPCM.py  blockplacer.py  guiblockgen.py  rehelper.py  xperia_check.py
(+734 files in other folders)
